--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -49,6 +49,16 @@ anastasia_pistofidou:
   google:
     plus:
     
+anna_carreras:
+  name: Anna Carreras
+  email: 
+  bio: "bio"
+  avatar: https://avatars3.githubusercontent.com/u/2182422?v=3&s=400
+  facebook:
+  flickr:
+  google:
+    plus:
+    
 artist_name:
   name: Artist Name
   email: 
