--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -58,6 +58,16 @@ anna_carreras:
   flickr:
   google:
     plus:
+
+nuria_nia:
+  name: Nuria Nia
+  email: 
+  bio: "bio"
+  avatar: 
+  facebook:
+  flickr:
+  google:
+    plus:
     
 artist_name:
   name: Artist Name
