--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -60,14 +60,14 @@ anna_carreras:
     plus:
 
 nuria_nia:
-  name: Nuria Nia
-  email: 
+  name: Núria Nia
+  email: nuria@lapanoramica.cat
   bio: "bio"
-  avatar: 
-  facebook:
+  avatar: https://scontent-mad.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/400604_10151962608128090_1180143273_n.jpg?oh=582d1833120828ca8d3ca4a5e4ffc8a1&oe=5586CD13
+  facebook: https://www.facebook.com/nuria.nia
   flickr:
-  google:
-    plus:
+  google: 
+    plus: https://plus.google.com/u/0/+N%C3%BAriaNia/posts
     
 artist_name:
   name: Artist Name
