--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -62,7 +62,7 @@ anna_carreras:
 nuria_nia:
   name: Núria Nia
   email: nuria@lapanoramica.cat
-  bio: Filmmaker and Communication Manager
+  bio: Filmmaker and Communications Manager
   avatar: https://scontent-mad.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/400604_10151962608128090_1180143273_n.jpg?oh=582d1833120828ca8d3ca4a5e4ffc8a1&oe=5586CD13
   facebook: https://www.facebook.com/nuria.nia
   flickr:
