--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -69,8 +69,8 @@ nuria_nia:
   google: 
     plus: https://plus.google.com/u/0/+N%C3%BAriaNia/posts
     
-artist_name:
-  name: Artist Name
+francesc:
+  name: Francesc B.
   email: 
   bio: "bio"
   avatar:
