--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -79,3 +79,12 @@ francesc:
   google:
     plus:
     
+francesco:
+  name: Francesco Marino 
+  email: francesco@360fun.net
+  bio: "360°CREATIVE"
+  avatar: http://www.360fun.net/logo
+  facebook: http://www.360fun.net/facebook
+  twitter: http://www.360fun.net/twitter
+  behance: http://www.360fun.net/behance
+  linkedin: http://www.360fun.net/linkedin
