--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -84,7 +84,7 @@ francesco:
   email: francesco@360fun.net
   bio: "360°CREATIVE"
   avatar: http://www.360fun.net/logo
-  facebook: http://www.360fun.net/facebook
-  twitter: http://www.360fun.net/twitter
-  behance: http://www.360fun.net/behance
-  linkedin: http://www.360fun.net/linkedin
+  facebook: 360fun.net
+  twitter: 360fun_net
+  behance: 360fun
+  linkedin: francesco-marino
