--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -87,4 +87,4 @@ francesco:
   facebook: 360fun.net
   twitter: 360fun_net
   behance: 360fun
-  linkedin: francesco-marino
+  linkedin: www.linkedin.com/pub/francesco-marino
