--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -87,3 +87,11 @@ francesco:
   facebook: 360fun.net
   twitter: 360fun_net
   
+  Dilnoza:
+  name: Dilnoza Shaumarova
+  email: dilnoza.shaumarova@gmail.com
+  bio: "Education"
+  avatar: 
+  facebook: 
+  twitter: 
+  
