--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -100,4 +100,11 @@ francesco:
   email: pauo.vix@gmail.com
   bio: "Dancer"
   
+Xavi:
+  name: Xavi Nuñez
+  email: xnunez@xtec.cat
+  bio: "Dancer, Performer and Educator"
+  avatar: 
+  facebook: https://www.facebook.com/xavi.n.morera
+
   
