--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -100,7 +100,7 @@ francesco:
   email: pauo.vix@gmail.com
   bio: "Dancer"
   
-Xavi:
+xavi:
   name: Xavi Nuñez
   email: xnunez@xtec.cat
   bio: "Dancer, Performer and Educator"
