--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -107,4 +107,12 @@ xavi:
   bio: "Dancer, Performer and Educator"
   avatar: bio-photo.jpg
   facebook: https://www.facebook.com/xavi.n.morera
+  
+alfredo:
+  name: Alfredo Acosta
+  email: alfredo@imaginabarcelona.com
+  bio: "Architect and Light Designer"
+  avatar: bio-photo.jpg
+  twitter: imaginabarcelon
+
 
