--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -115,4 +115,9 @@ alfredo:
   avatar: bio-photo.jpg
   twitter: imaginabarcelon
 
-
+doerte:
+  name: Doerte Weig
+  email: .com
+  bio: "Movement Researcher"
+  avatar: https://a0.muscache.com/ic/users/1937754/profile_pic/1334907745/original.jpg?interpolation=lanczos-none&crop=w:w;*,*&crop=h:h;*,*&resize=225:*&output-format=jpg&output-quality=70
+  twitter: doerteweig
