--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -121,3 +121,11 @@ doerte:
   bio: "Movement Researcher"
   avatar: https://a0.muscache.com/ic/users/1937754/profile_pic/1334907745/original.jpg?interpolation=lanczos-none&crop=w:w;*,*&crop=h:h;*,*&resize=225:*&output-format=jpg&output-quality=70
   twitter: doerteweig
+
+sergi:
+  name: Sergi Armengol
+  email: armengol.sergg@gmail.com
+  bio: "Engineer and Digital Artist"
+  avatar: http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/5/000/219/075/165bab9.jpg
+  twitter: srcometa
+  facebook: armengol.sergg
