--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -129,3 +129,11 @@ sergi:
   avatar: http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/5/000/219/075/165bab9.jpg
   twitter: srcometa
   facebook: armengol.sergg
+
+diego:
+  name: Diego Suárez
+  email: diegosuarezbarcena@hotmail.com
+  bio: "Digital Artist"
+  avatar: http://diegosb.es/img/Pies/pieBio.jpg
+  twitter: 
+  facebook: diego.suarez.927758
