--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -143,6 +143,6 @@ citlali:
   name: Citlali Hernández
   email: citlali.hs@gmail.com
   bio: "Industrial Designer"
-  avatar: https://www.facebook.com/photo.php?fbid=10154844152500704&set=a.10150274898370704.530468.816580703&type=3&src=https%3A%2F%2Ffbcdn-sphotos-b-a.akamaihd.net%2Fhphotos-ak-xfp1%2Fv%2Ft1.0-9%2F10600552_10154844152500704_2804190203396020743_n.jpg%3Foh%3D9bc4bbed8c1f72838b0f87c7e9bdb7b4%26oe%3D55891787%26__gda__%3D1434794210_97e7db1870bbe803ec02b377c16e5707&size=255%2C238
+  avatar: https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/10600552_10154844152500704_2804190203396020743_n.jpg?oh=9bc4bbed8c1f72838b0f87c7e9bdb7b4&oe=55891787&__gda__=1434794210_97e7db1870bbe803ec02b377c16e5707
   twitter: _limonada_
   facebook: citlali.limonada
