--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -152,3 +152,10 @@ nicolas:
   bio: "Sound Artist and Composer"
   avatar: https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10346643_10152474582026085_8279243309129905081_n.jpg?oh=e789dc44134cccba30fc1d5210cad214&oe=55761D1A&__gda__=1437829294_6fcb3455d592351a9b5d5a160d3e0d06
   facebook: nvilla1
+
+andres_costa:
+  name: Andrés Costa
+  email: acircular@gmail.com
+  bio: "Visual Artist"
+  avatar: http://acircular.org/images/cabecera_acircular.jpg
+  twitter: acircular
