--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -159,3 +159,11 @@ andres_costa:
   bio: "Visual Artist"
   avatar: http://acircular.org/images/cabecera_acircular.jpg
   twitter: acircular
+  
+  brisa_mp:
+  name: Brisa MP
+  email: ciacaidalibre@hotmail.com
+  bio: "Media artist and performer-dancer"
+  avatar: http://acircular.org/images/cabecera_acircular.jpg
+  twitter: brichilee
+  facebook: Brisa_mp
